--- a/.env.lolipop
+++ b/.env.lolipop
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=prodction
-APP_KEY=base64:YpUDcEY01nibmaPbU57oA79biJJFlWtVWUBRyIjT0r0=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://pjtgsmdb.com/
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql211.phy.lolipop.lan
+DB_HOST=mysql303.phy.lolipop.lan
 DB_PORT=3306
-DB_DATABASE=LAA1433899-fcdtecdb
-DB_USERNAME=LAA1433899
-DB_PASSWORD=fcdtecdb
+DB_DATABASE=LAA1592122-mediadb
+DB_USERNAME=LAA1592122
+DB_PASSWORD=media7834
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
