--- a/.env.lolipop
+++ b/.env.lolipop
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=prodction
-APP_KEY=
+APP_KEY=base64:YpUDcEY01nibmaPbU57oA79biJJFlWtVWUBRyIjT0r0=
 APP_DEBUG=true
 APP_URL= http://media-gakuin.com
 
